initialise dunst, changed picom fork

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -193,6 +193,7 @@ opacity-rule = [
   "75:class_g    = 'Element'",
   "85:class_g    = 'cubiomes-viewer'",
   "70:class_g    = 'kitty'",
+  "50:class_g    = 'dunst'",
   "70:class_g    = 'Xfce4-terminal'",
   "95:class_g     = 'Thunar'",
   "100:class_g    = 'code-oss'",
@@ -482,10 +483,11 @@ log-level = "info";
 #
 wintypes:
 {
-  normal = {animations=true; fade=false;opacity = 1; shadow = true; }
+  normal = {animations=true; fade=false ;opacity = 1; shadow = true;}
   tooltip = { fade = false; shadow = false; opacity = 0.9; focus = true; full-shadow = false; };
   dock = {fade = false; shadow = true; opacity = 1; }
   dnd = {fade = false; shadow = true; opacity = 1; }
   popup_menu = {fade = false; opacity = 0.9; shadow = true; }
   dropdown_menu = {fade = false; opacity = 0.9; shadow = true; }
+  notification = {fade = false; animations = true; opacity = 0.7}
 };
