finalise dunst pywal with critical icon too (hopefullt never have to touch dunst again)

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -17,23 +17,23 @@ dim_opacity 0.75
 map kitty_mod+c copy_to_clipboard
 map ctrl+c copy_and_clear_or_interrupt
 enable_audio_bell no
-foreground   #f2e2c7
-background   #120c13
-cursor       #f2e2c7
+foreground   #c8cecc
+background   #050614
+cursor       #c8cecc
 
-color0       #120c13
-color8       #a99e8b
-color1       #A55165
-color9       #A55165
-color2       #D46956
-color10      #D46956
-color3       #EF9F5C
-color11      #EF9F5C
-color4       #F2AF5A
-color12      #F2AF5A
-color5       #8E5487
-color13      #8E5487
-color6       #F0B38B
-color14      #F0B38B
-color7       #f2e2c7
-color15      #f2e2c7
+color0       #050614
+color8       #8c908e
+color1       #525365
+color9       #525365
+color2       #988762
+color10      #988762
+color3       #33608E
+color11      #33608E
+color4       #50709E
+color12      #50709E
+color5       #5E8AB1
+color13      #5E8AB1
+color6       #67A0C6
+color14      #67A0C6
+color7       #c8cecc
+color15      #c8cecc
