--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -185,26 +185,26 @@ focus-exclude = [
 #
 # opacity-rule = []
 opacity-rule = [
-  "80:class_g     = 'Bar'",             # lemonbar
+  "100:class_g     = 'Bar'",             # lemonbar
   "100:class_g    = 'slop'",            # maim
   "100:class_g    = 'XTerm'",
-  "75:class_g    = 'discord'",
+  "100:class_g    = 'discord'",
   "100:class_g    = 'URxvt'",
-  "75:class_g    = 'Element'",
-  "85:class_g    = 'cubiomes-viewer'",
-  "70:class_g    = 'kitty'",
-  "50:class_g    = 'dunst'",
+  "100:class_g    = 'Element'",
+  "100:class_g    = 'cubiomes-viewer'",
+  "98:class_g    = 'kitty'",
+  "100:class_g    = 'dunst'",
   "70:class_g    = 'Xfce4-terminal'",
-  "95:class_g     = 'Thunar'",
+  "100:class_g     = 'Thunar'",
   "100:class_g    = 'code-oss'",
-  "75:class_g = 'Rofi'",
+  "100:class_g = 'Rofi'",
   "100:class_g    = 'Meld'",
-  "70:class_g     = 'TelegramDesktop'",
-  "90:class_g     = 'Joplin'",
+  "100:class_g     = 'TelegramDesktop'",
+  "100:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'",
   "100:class_g    = 'Thunderbird'",
-  "92:class_g	  = 'Chromium'",
-  "59:class_g	='Xfce4-panel'",
+  "100:class_g	  = 'Chromium'",
+  "98:class_g	='Xfce4-panel'",
   "70:class_g	='Spotify'"
 ];
 
@@ -248,17 +248,17 @@ blur-background = true;
 #blur-kern = "3x3box";
 
 
-blur: {
-#  # requires: https://github.com/ibhagwan/picom
-#  method = "box";
-method = "dual_kawase";
-strength = 10;
-#deviation = 100.0;
-#kernel = "11x11gaussian";
-background-frame = true;
-background-fixed = true;
-#  kern = "3x3box";
-}
+# blur: {
+# #  # requires: https://github.com/ibhagwan/picom
+# #  method = "box";
+# method = "dual_kawase";
+# strength = 10;
+# #deviation = 100.0;
+# #kernel = "11x11gaussian";
+# background-frame = true;
+# # background-fixed = true;
+# # #  kern = "3x3box";
+# }
 
 # Exclude conditions for background blur.
 blur-background-exclude = [
@@ -487,7 +487,7 @@ wintypes:
   tooltip = { fade = false; shadow = false; opacity = 0.9; focus = true; full-shadow = false; };
   dock = {fade = false; shadow = true; opacity = 1; }
   dnd = {fade = false; shadow = true; opacity = 1; }
-  popup_menu = {fade = false; opacity = 0.9; shadow = true; }
-  dropdown_menu = {fade = false; opacity = 0.9; shadow = true; }
+  popup_menu = {fade = false; opacity = 1.0; shadow = true; }
+  dropdown_menu = {fade = false; opacity = 1.0; shadow = true; }
   notification = {fade = false; animations = true; opacity = 0.7}
 };
