--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -17,23 +17,23 @@ dim_opacity 0.75
 map kitty_mod+c copy_to_clipboard
 map ctrl+c copy_and_clear_or_interrupt
 enable_audio_bell no
-foreground   #c8cecc
-background   #050614
-cursor       #c8cecc
+foreground   #f6e1c7
+background   #0A0F15
+cursor       #f6e1c7
 
-color0       #050614
-color8       #8c908e
-color1       #525365
-color9       #525365
-color2       #988762
-color10      #988762
-color3       #33608E
-color11      #33608E
-color4       #50709E
-color12      #50709E
-color5       #5E8AB1
-color13      #5E8AB1
-color6       #67A0C6
-color14      #67A0C6
-color7       #c8cecc
-color15      #c8cecc
+color0       #0A0F15
+color8       #ac9d8b
+color1       #AF5458
+color9       #AF5458
+color2       #F79567
+color10      #F79567
+color3       #746A87
+color11      #746A87
+color4       #A1788E
+color12      #A1788E
+color5       #AE8DA5
+color13      #AE8DA5
+color6       #E0A3A2
+color14      #E0A3A2
+color7       #f6e1c7
+color15      #f6e1c7
