--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -192,7 +192,7 @@ opacity-rule = [
   "100:class_g    = 'URxvt'",
   "100:class_g    = 'Element'",
   "100:class_g    = 'cubiomes-viewer'",
-  "98:class_g    = 'kitty'",
+  "100:class_g    = 'kitty'",
   "100:class_g    = 'dunst'",
   "70:class_g    = 'Xfce4-terminal'",
   "100:class_g     = 'Thunar'",
@@ -204,8 +204,8 @@ opacity-rule = [
   "100:class_g    = 'firefox'",
   "100:class_g    = 'Thunderbird'",
   "100:class_g	  = 'Chromium'",
-  "98:class_g	='Xfce4-panel'",
-  "98:class_g	='Spotify'"
+  "100:class_g	='Xfce4-panel'",
+  "100:class_g	='Spotify'"
 ];
 
 
@@ -226,7 +226,7 @@ opacity-rule = [
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
 #
-blur-background = true;
+blur-background = false;
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
