--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 map ctrl+v paste_from_clipboard
-font_family      SauceCodePro Nerd Font Regular
+font_family      JetBrains Mono Regular Nerd Font Complete
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
