--- a/.config/yay/config.json
+++ b/.config/yay/config.json
@@ -1,7 +1,7 @@
 {
 	"aururl": "https://aur.archlinux.org",
 	"buildDir": "/home/mag/.cache/yay",
-	"editor": "nano",
+	"editor": "nvim",
 	"editorflags": "",
 	"makepkgbin": "makepkg",
 	"makepkgconf": "",
@@ -39,7 +39,7 @@
 	"editmenu": true,
 	"combinedupgrade": false,
 	"useask": false,
-	"batchinstall": false,
+	"batchinstall": true,
 	"singlelineresults": false,
 	"separatesources": true,
 	"version": "11.3.0"
