--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = MaG-NITud3
-	email = theeparthasarathi@gmail.com
+	email = 78688755+MaG-NITud3@users.noreply.github.com
 [core]
 	excludesFile = .gitignore_global
 	autocrlf = input
