--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -205,6 +205,7 @@ opacity-rule = [
   "100:class_g    = 'Thunderbird'",
   "100:class_g	  = 'Chromium'",
   "100:class_g	='Xfce4-panel'",
+  "100:class_g	= 'Alacritty'",
   "100:class_g	='Spotify'"
 ];
 
