--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,7 @@
 [user]
 	name = MaG-NITud3
 	email = 78688755+MaG-NITud3@users.noreply.github.com
+	signingkey = C43652DA277F194A8CC7FE85A2B57476B015A1B3
 [core]
 	excludesFile = .gitignore_global
 	autocrlf = input
@@ -18,3 +19,5 @@
 	driver = true
 [gui]
 	recentrepo = /home/mag/Workstation/Crap/gitwork/QueueMod
+[commit]
+	gpgsign = true
