--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = MaG-NITud3
-	email = 78688755+MaG-NITud3@users.noreply.github.com
+	email = theeparthasarathi@gmail.com
 	signingkey = 25DC188CA9FF46A2
 [core]
 	excludesFile = .gitignore_global
