--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,7 +3,7 @@ font_family      JetBrains Mono Regular Nerd Font Complete
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-font_size 12.0
+font_size 20.0
 cursor_text_color #111111
 cursor_shape beam
 cursor_beam_thickness 1.0
@@ -11,7 +11,8 @@ cursor_blink_interval -1
 default_pointer_shape beam
 window_border_width 0.5pt
 draw_minimal_borders yes
-window_padding_width 13
+window_padding_width 25
+placement_strategy top-left
 background_opacity 1
 dim_opacity 0.75
 map kitty_mod+c copy_to_clipboard
